<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical|center_horizontal" >

    <ScrollView android:id="@+id/purchase_items" android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:layout_alignParentTop="true">
        <RelativeLayout  android:layout_width="fill_parent" android:layout_height="wrap_content" >
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:textSize="16sp" android:text="@string/addcat_title"
                android:layout_alignParentTop="true" android:id="@+id/category"/>
            <Spinner android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/purchase_cat" android:layout_below="@+id/category"/>
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:textSize="16sp" android:text="@string/addproduct_title"
                android:layout_below="@+id/purchase_cat" android:id="@+id/product"/>
            <Spinner android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:id="@+id/purchase_product" android:layout_below="@+id/product"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textSize="16sp" android:text="@string/sales_quantity"
                android:layout_below="@+id/purchase_product" android:id="@+id/quantity" />
            <EditText android:id="@+id/purchase_qnty" android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textSize="16sp" android:inputType="number" android:layout_toRightOf="@+id/quantity"
                android:layout_alignBaseline="@+id/quantity" />
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:textSize="16sp" android:text="@string/sales_saleprice"
                android:layout_below="@+id/quantity" android:id="@+id/price" />
            <EditText android:id="@+id/purchase_price" android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:textSize="16sp" android:inputType="numberDecimal" android:layout_toRightOf="@+id/price"
                android:layout_alignBaseline="@+id/price" android:layout_alignLeft="@+id/purchase_qnty"/>
        </RelativeLayout>
    </ScrollView>
    <LinearLayout android:id="@+id/purchase_buttons" android:layout_width="fill_parent" android:orientation="horizontal"
        android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <Button android:id="@+id/btnpurchase_cancel" android:layout_weight="1"
            android:layout_width="@dimen/button_width" android:layout_height="@dimen/button_height" 
            android:background="@drawable/button_background_grad_other"
            android:text="@string/sales_cancel" android:textSize="16sp" android:textStyle="bold"/>
        <Button
            android:id="@+id/btnpurchase_summary" android:layout_weight="1"
            android:layout_width="@dimen/button_width" android:layout_height="@dimen/button_height"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="@drawable/button_background_grad_other"
            android:text="@string/sales_summary" android:textSize="16sp"
            android:textStyle="bold" android:typeface="normal" />
    </LinearLayout>
</RelativeLayout>