<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent" 
    android:background="@color/coalblack">
    <RelativeLayout
        android:id="@+id/header" android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:background="@drawable/ic_launcher"
        android:gravity="center_vertical" android:orientation="horizontal"
        android:padding="5dp" >
        <LinearLayout
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:background="@drawable/ic_launcher" android:gravity="center_vertical"
            android:orientation="horizontal" android:padding="5dp" >
            <ImageView
                android:id="@+id/logo" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:contentDescription="@string/jst_a_pic"
                android:src="@drawable/ic_launcher" />
            <TextView
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:gravity="center" android:text="@string/app_name"
                android:textColor="#ffffff" android:textSize="15sp"
                android:textStyle="bold" android:typeface="sans" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_alignParentRight="true" android:background="@drawable/ic_launcher"
            android:gravity="center_vertical" android:orientation="horizontal"
            android:padding="5dp" >
            <ImageView
                android:id="@+id/settings" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:contentDescription="@string/jst_a_pic"
                android:onClick="onSettingsClick" android:src="@drawable/ic_launcher" />
        </LinearLayout>
    </RelativeLayout>
    <ScrollView
        android:layout_width="fill_parent" android:layout_height="fill_parent"
        android:layout_below="@id/header" android:fillViewport="true" >
        <RelativeLayout
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:background="@color/coalblack" >
            <ImageView
                android:id="@+id/login_icon" android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:contentDescription="@string/jst_a_pic"
                android:src="@drawable/ic_launcher" />
            <TextView
                android:id="@+id/login_text" android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:layout_below="@id/login_icon"
                android:gravity="center" android:text="@string/user_login"
                android:textColor="#0093D2" android:textSize="13sp"
                android:textStyle="bold" android:typeface="sans" />
            <LinearLayout
                android:id="@+id/login_form" android:layout_width="fill_parent" 
                android:layout_height="wrap_content" android:layout_below="@id/login_text"
                android:orientation="horizontal" android:baselineAligned="false">
                <TextView
                    android:layout_width="fill_parent" android:layout_height="wrap_content"
                    android:layout_weight="5" >
                </TextView>

                <LinearLayout
                    android:id="@+id/login_box" android:layout_width="fill_parent" 
                    android:layout_height="wrap_content" android:background="@drawable/login_background"
                    android:gravity="center" android:orientation="vertical"  android:layout_weight="1"
                    android:padding="10dp" >
                    <TextView
                        android:layout_width="fill_parent" android:layout_height="fill_parent"
                        android:text="@string/reg_phonenumber" android:textColor="#FFFFFF"
                        android:textStyle="bold" />
                    <EditText
                        android:id="@+id/register_phone_no" android:layout_width="fill_parent"
                        android:layout_height="wrap_content" android:background="@drawable/edittext_background"
                        android:hint="@string/reg_phonenumber" android:maxLines="1" 
                        android:paddingBottom="4dp" android:paddingLeft="4dp"
                        android:paddingTop="4dp" android:inputType="phone"
                        android:singleLine="true" android:textColor="#000" />
                    <TextView
                        android:layout_width="fill_parent" android:layout_height="fill_parent"
                        android:text="@string/reg_email" android:textColor="#FFFFFF"
                        android:textStyle="bold" />
                    <EditText
                        android:id="@+id/register_email" android:layout_width="fill_parent"
                        android:layout_height="wrap_content" android:background="@drawable/edittext_background"
                        android:hint="@string/reg_email" android:maxLines="1" 
                        android:paddingBottom="4dp" android:paddingLeft="4dp"
                        android:paddingTop="4dp" android:inputType="textEmailAddress"
                        android:singleLine="true" android:textColor="#000" />
                    <TextView
                        android:layout_width="fill_parent" android:layout_height="fill_parent"
                        android:text="@string/reg_password" android:textColor="#FFFFFF"
                        android:textStyle="bold" />
                    <EditText
                        android:id="@+id/loginPassword" android:layout_width="fill_parent"
                        android:layout_height="wrap_content" android:background="@drawable/edittext_background"
                        android:hint="@string/reg_password" android:maxLines="1" 
                        android:paddingBottom="4dp" android:paddingLeft="4dp"
                        android:paddingTop="4dp" android:inputType="textPassword"
                        android:singleLine="true" android:textColor="#000" />
                    <TextView
                        android:layout_width="fill_parent" android:layout_height="fill_parent"
                        android:text="@string/reg_confirm_password" android:textColor="#FFFFFF"
                        android:textStyle="bold" />
                    <EditText
                        android:id="@+id/loginPasswordConfirm" android:layout_width="fill_parent"
                        android:layout_height="wrap_content" android:background="@drawable/edittext_background"
                        android:hint="@string/reg_confirm_password" android:maxLines="1" 
                        android:paddingBottom="4dp" android:paddingLeft="4dp"
                        android:paddingTop="4dp" android:inputType="textPassword"
                        android:singleLine="true" android:textColor="#000" />
                    <TextView
                        android:layout_width="fill_parent" android:layout_height="fill_parent"
                        android:text="@string/reg_fullname" android:textColor="#FFFFFF"
                        android:textStyle="bold" />
                    <EditText
                        android:id="@+id/register_full_name" android:layout_width="fill_parent"
                        android:layout_height="wrap_content" android:background="@drawable/edittext_background"
                        android:hint="@string/reg_fullname" android:maxLines="1" 
                        android:paddingBottom="4dp" android:paddingLeft="4dp"
                        android:paddingTop="4dp" android:singleLine="true" android:textColor="#000" />
                    <TextView
                        android:layout_width="fill_parent" android:layout_height="fill_parent"
                        android:text="@string/reg_country" android:textColor="#FFFFFF"
                        android:textStyle="bold" />
                    <Spinner android:id="@+id/register_country" android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:background="@drawable/textbox_border"
                        android:paddingBottom="4dp" android:paddingLeft="4dp" android:paddingTop="4dp"/>
                    <LinearLayout
                        android:layout_width="fill_parent" android:layout_height="wrap_content"
                        android:layout_marginTop="10dp" android:gravity="right" >
                        <Button
                            android:id="@+id/btnRegister" android:layout_width="@dimen/button_width"
                            android:layout_height="@dimen/button_height" android:layout_gravity="right"
                            android:background="@drawable/button_background_grad_other"
                            android:onClick="onRegisterClick" android:text="@string/btn_register"
                            android:textSize="16sp" android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:layout_width="fill_parent" android:layout_height="wrap_content"
                    android:layout_weight="5" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent" android:layout_height="wrap_content"
                android:layout_below="@id/login_form" android:gravity="center" >

                <TextView
                    android:id="@+id/app_version" android:layout_width="wrap_content"
                    android:layout_height="fill_parent" android:gravity="center_horizontal|bottom"
                    android:text="@string/app_version" android:textColor="#67696D"
                    android:textStyle="italic" >
                </TextView>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>