<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"		
	android:padding="10dp" android:gravity="center" android:orientation="vertical"
	android:layout_gravity="center_horizontal"		
	android:addStatesFromChildren="true">
	<com.safapp.utils.ui.FlowLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:layout_gravity="center_horizontal"
		android:addStatesFromChildren="true"
		app:horizontalSpacing="1dp"
		app:verticalSpacing="1dp" >
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical" >
				<LinearLayout
					android:id="@+id/sales"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingRight="6dp"
					android:paddingTop="6dp" >
					<com.safapp.utils.ui.CustomButton
						android:id="@+id/dashboard_sales"
						android:layout_width="100dp"
						android:layout_height="100dp"
						android:background="@drawable/ic_launcher" />
				</LinearLayout>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:text="@string/dash_sale"
				android:textColor="#000000"
				android:textStyle="bold" />
		</LinearLayout>
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical" >
				<LinearLayout
					android:id="@+id/purchases"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingRight="6dp"
					android:paddingTop="6dp" >
					<com.safapp.utils.ui.CustomButton
						android:id="@+id/dashboard_purchases"
						android:layout_width="100dp"
						android:layout_height="100dp"
						android:background="@drawable/ic_launcher" />
				</LinearLayout>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:text="@string/dash_purchase"
				android:textColor="#000000"
				android:textStyle="bold" />
		</LinearLayout>
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingRight="6dp"
			android:paddingTop="6dp" >
			<com.safapp.utils.ui.CustomButton
				android:id="@+id/dashboard_admin"
				android:layout_width="100dp"
				android:layout_height="100dp"
				android:background="@drawable/ic_launcher" />
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:text="@string/dash_admin"
				android:textColor="#000000"
				android:textStyle="bold" />
		</LinearLayout>
		
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingRight="6dp"
			android:paddingTop="6dp" >
			<com.safapp.utils.ui.CustomButton
				android:id="@+id/dashboard_reports"
				android:layout_width="100dp"
				android:layout_height="100dp"
				android:background="@drawable/ic_launcher" />
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:text="@string/dash_reports"
				android:textColor="#000000"
				android:textStyle="bold" />
		</LinearLayout>
		
	</com.safapp.utils.ui.FlowLayout>
</ScrollView>